--- a/package.json
+++ b/package.json
@@ -1,23 +1,48 @@
 {
-  "name": "sdm-handal",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "sdm-handal",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "NODE_OPTIONS='--inspect' next dev --turbopack --experimental-https",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-portal": "^1.1.6",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@react-google-maps/api": "^2.20.6",
+		"bcrypt": "^5.1.1",
+		"cardinal": "^2.1.1",
+		"chart.js": "^4.4.9",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.9.2",
+		"geolib": "^3.3.4",
+		"jose": "^6.0.10",
+		"js-cookie": "^3.0.5",
+		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
+		"leaflet": "^1.9.4",
+		"lucide-react": "^0.503.0",
+		"moment": "^2.30.1",
+		"moment-timezone": "^0.5.48",
+		"mysql2": "^3.14.0",
+		"next": "15.3.1",
+		"react": "^19.0.0",
+		"react-chartjs-2": "^5.3.0",
+		"react-dom": "^19.0.0",
+		"react-leaflet": "^5.0.0",
+		"react-webcam": "^7.2.0",
+		"tailwind-merge": "^3.2.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"eslint": "^9",
+		"eslint-config-next": "15.3.1",
+		"tailwindcss": "^4",
+		"tailwindcss-animate": "^1.0.7",
+		"tw-animate-css": "^1.2.8"
+	}
 }
