--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "NODE_OPTIONS='--inspect' next dev --turbopack --experimental-https",
 		"build": "next build",
-		"start": "next start",
+		"start": "NODE_ENV=production node server.js",
 		"lint": "next lint"
 	},
 	"dependencies": {
