--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"moment-timezone": "^0.5.48",
 		"mysql2": "^3.14.0",
 		"next": "15.3.1",
+		"next-pwa": "^5.6.0",
 		"react": "^19.0.0",
 		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.0.0",
