--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-accordion": "^1.2.10",
+		"@radix-ui/react-alert-dialog": "^1.1.13",
+		"@radix-ui/react-dialog": "^1.1.13",
+		"@radix-ui/react-popover": "^1.1.13",
 		"@radix-ui/react-portal": "^1.1.6",
-		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-select": "^2.2.4",
+		"@radix-ui/react-slot": "^1.2.2",
 		"@react-google-maps/api": "^2.20.6",
+		"@react-pdf-viewer/core": "^3.12.0",
+		"@react-pdf-viewer/default-layout": "^3.12.0",
+		"@react-pdf-viewer/page-navigation": "^3.12.0",
+		"@react-pdf-viewer/toolbar": "^3.12.0",
+		"@react-pdf-viewer/zoom": "^3.12.0",
 		"bcrypt": "^5.1.1",
 		"cardinal": "^2.1.1",
 		"chart.js": "^4.4.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^2.30.0",
 		"framer-motion": "^12.9.2",
 		"geolib": "^3.3.4",
 		"jose": "^6.0.10",
@@ -30,11 +42,15 @@
 		"mysql2": "^3.14.0",
 		"next": "15.3.1",
 		"next-pwa": "^5.6.0",
+		"pdfjs-dist": "^3.4.120",
 		"react": "^19.0.0",
 		"react-chartjs-2": "^5.3.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
 		"react-leaflet": "^5.0.0",
+		"react-pdf": "^9.2.1",
 		"react-webcam": "^7.2.0",
+		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0"
 	},
 	"devDependencies": {
