--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-portal": "^1.1.6",
 		"@radix-ui/react-select": "^2.2.4",
 		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-tabs": "^1.1.11",
 		"@react-google-maps/api": "^2.20.6",
 		"@react-pdf-viewer/core": "^3.12.0",
 		"@react-pdf-viewer/default-layout": "^3.12.0",
