--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
 		"date-fns": "^2.30.0",
 		"framer-motion": "^12.9.2",
 		"geolib": "^3.3.4",
+		"html2canvas": "^1.4.1",
 		"jose": "^6.0.10",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
+		"jspdf": "^3.0.1",
 		"jwt-decode": "^4.0.0",
 		"leaflet": "^1.9.4",
 		"lucide-react": "^0.503.0",
@@ -44,12 +46,14 @@
 		"next": "15.3.1",
 		"next-pwa": "^5.6.0",
 		"pdfjs-dist": "^3.4.120",
+		"puppeteer-core": "^24.9.0",
 		"react": "^19.0.0",
 		"react-chartjs-2": "^5.3.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
 		"react-leaflet": "^5.0.0",
 		"react-pdf": "^9.2.1",
+		"react-signature-canvas": "^1.1.0-alpha.2",
 		"react-webcam": "^7.2.0",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0"
