--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,12 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# certificates
 certificates
+
+# PM2 logs and runtime files
+logs/
+*.log
+.pm2/
+pids/
+pm2.log
