Update PM2 configuration to use cluster mode with six instances for improved load balancing and performance

--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
 		"pm2:monit": "pm2 monit",
 		"pm2:list": "pm2 list",
 		"pm2:status": "pm2 status sdm-app",
-		"deploy:production": "chmod +x scripts/deploy-production.sh && ./scripts/deploy-production.sh",
-		"monitor": "pm2 start pm2-monitoring.config.js",
+		"pm2:scale": "pm2 scale sdm-app",
+		"pm2:show": "pm2 show sdm-app",
+		"deploy:production": "pm2 stop all && pm2 delete all && pm2 start ecosystem.config.js --env production",
+		"deploy:cluster": "pm2 stop all && pm2 delete all && pm2 start ecosystem.config.js --env production",
+		"cluster:scale-up": "pm2 scale sdm-app +2",
+		"cluster:scale-down": "pm2 scale sdm-app -2",
+		"cluster:reset": "pm2 scale sdm-app 6",
+		"monitor": "pm2 monit",
 		"load-test": "echo '🧪 Load testing for 300 concurrent users...' && echo 'Install artillery: npm install -g artillery' && echo 'Run: artillery run load-test.yml'",
-		"health-check": "curl -f http://localhost:3001/api/health || exit 1",
+		"health-check": "curl -f http://localhost:3001 || exit 1",
 		"performance-check": "pm2 show sdm-app && pm2 monit"
 	},
 	"dependencies": {
