--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"bcrypt": "^5.1.1",
 		"cardinal": "^2.1.1",
 		"chart.js": "^4.4.9",
+		"chokidar": "^3.6.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -80,8 +81,7 @@
 		"react-signature-canvas": "^1.1.0-alpha.2",
 		"react-webcam": "^7.2.0",
 		"sonner": "^2.0.3",
-		"tailwind-merge": "^3.2.0",
-		"chokidar": "^3.5.3"
+		"tailwind-merge": "^3.2.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
