--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"react-dom": "^19.0.0",
 		"react-leaflet": "^5.0.0",
 		"react-signature-canvas": "^1.1.0-alpha.2",
+		"react-to-pdf": "^2.0.1",
 		"react-webcam": "^7.2.0",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0"
