--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
 		"react-to-pdf": "^2.0.1",
 		"react-webcam": "^7.2.0",
 		"sonner": "^2.0.3",
-		"tailwind-merge": "^3.2.0"
+		"tailwind-merge": "^3.2.0",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
